force-app/src/objects/TR1__Account_Wrapper__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Wrappers</relationshipLabel>
        <relationshipName>Account_Wrappers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Amount_of_Contacts__c</fullName>
        <label>Amount of Contacts</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Amount_of_Candidates_per_Account__c</fullName>
        <label>Maximum Amount of Candidates per Account</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Reason_for_Deactivation__c</fullName>
        <label>Reason for Deactivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Was Full</fullName>
                </value>
                <value>
                    <fullName>Pool Decreased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Wrapper</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00}</displayFormat>
        <label>Account  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Wrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>